trying to fix overflow on x

--- a/src/styles/LinkInBio.module.css
+++ b/src/styles/LinkInBio.module.css
@@ -15,8 +15,13 @@ div.LinkInBio {
     width: 100%;
 
     img {
-      max-width: 6rem;
-      max-height: auto;
+      /* max-width: 6rem;
+      max-height: auto; */
+
+      max-width: 100%;
+      height: auto;
+      display: block;
+      box-sizing: border-box;
     }
   }
 
